--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.2.0",
     "better-react-mathjax": "^2.0.2",
     "bootstrap": "^5.2.3",
+    "linq": "^4.0.1",
+    "p5": "^1.5.0",
+    "patternomaly": "^1.3.2",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -49,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/p5": "^1.4.3"
   }
 }
