--- a/package.json
+++ b/package.json
@@ -13,29 +13,29 @@
     "axios": "^1.2.0",
     "better-react-mathjax": "^2.0.2",
     "bootstrap": "^5.2.3",
+    "dotenv-webpack": "^8.0.1",
     "linq": "^4.0.1",
     "p5": "^1.5.0",
     "patternomaly": "^1.3.2",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router": "^6.4.3",
-    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-switch": "^7.0.0",
     "socket.io-client": "^4.5.4",
-    "typescript": "^4.9.3",
+    "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "zustand": "^4.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --open --mode development --hot --port 3000",
+    "build": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +56,18 @@
     ]
   },
   "devDependencies": {
-    "@types/p5": "^1.4.3"
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@types/p5": "^1.4.3",
+    "babel-loader": "^9.1.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
