--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "patternomaly": "^1.3.2",
     "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
